More table / thumbnail styling fixes
Infoboxes do not look extremely terrible now. Only terrible.

Also move some px values to ems.

--- a/less/pagestyles.less
+++ b/less/pagestyles.less
@@ -3,7 +3,7 @@ body {
     color: #333;
     font-family: "Open Sans", sans-serif;
     font-size: 16px;
-    line-height: 160%;
+    line-height: 1.6em;
     margin: 0;
     padding: 0;
     margin-top: 48px;
@@ -26,8 +26,8 @@ a {
 h1 {
     font-family: serif;
     color: #333;
-    font-size: 26px;
-    line-height: 36px;
+    font-size: 1.6em;
+    line-height: 2.25em;
     margin-bottom: 24px;
     font-weight: bold;
 }
@@ -37,24 +37,26 @@ h2, h3, h4, h5, h6 {
 }
 
 h2 {
-    font-size: 22px;
+    font-size: 1.5em ;
 }
 
 h3 {
-    font-size: 20px;
+    font-size: 1.2em;
+    font-weight: bold;
 }
 
 h4 {
-    font-size: 18px;
+    font-weight: bold;
 }
-
-h5, h6 {
-    font-size: 16px;
-}
-
 
 /* Thumbnail styles from MobileFrontend */
 .thumb {
+    margin: 15px 0 15px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background: #f9f9f9;
+    text-align: center;
+
     .thumbinner {
         margin: 5px auto;
         max-width: 100%;
